--- a/calc/assets/styles.css
+++ b/calc/assets/styles.css
@@ -6,6 +6,27 @@ body {
     font-family: sans-serif;
 }
 
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    border: 1px solid #ddd;
+}
+
+th, td {
+    text-align: center;
+    padding: 16px;
+}
+
+th {
+    background-color: orange;
+    color: white;
+}
+
+tr:nth-child(even) {
+    background-color: #d2d2d2;
+}
+
 .flex-container-column {
     display: flex;
     flex-direction: column;
@@ -62,8 +83,17 @@ body {
     margin-top: 20px;
 }
 
+.history {
+    width: 80%;
+    margin: 30px auto 0 auto;
+    overflow: scroll;
+}
+
 @media screen and (max-width: 513px) {
     .button {
         padding: 10px;
+    }
+    .history {
+        width: 100%;
     }
 }
